# scriptprof

./: README.MD  pyproject.toml
src/scriptprof/: config.yaml  main.py
tests/: test_cli.py
tutorial/: tutorial_script.sh
